feat: Add api to update pdf files
