# server/server.js
@@ -158,14 +158,14 @@ apiRoute.register(paths.api.getMemoVersion, CourseMemo.getMemoVersion) // step 2
 // Get one draft | update it
 apiRoute.register(paths.api.getDraftByEndPoint, CourseMemo.getDraftByEndPoint) // step 2: editor, fetch data
 apiRoute.register(paths.api.updateCreatedDraft, CourseMemo.putDraftByEndPoint) // step 2: editor, fast update
-apiRoute.register(paths.api.updatedMemoById, CourseMemo.putMemoById)
+apiRoute.register(paths.api.updatedMemoWithApplicationCodes, CourseMemo.putApplicationCodesInMemo)
 
 // step 1: choose action, new draft, or copied draft from published memo (same memoEndPoint)
 apiRoute.register(paths.api.createDraftByMemoEndPoint, CourseMemo.createDraftByMemoEndPoint)
 apiRoute.register(paths.api.copyFromAPublishedMemo, CourseMemo.createDraftByMemoEndPoint)
 
 // // GET ARRAY OF MEMOS BY TYPE AND COURSE CODE
-apiRoute.register(paths.api.getAllMemosByCourseCode, CourseMemo.getAllMemosByCourseCode)
+apiRoute.register(paths.api.getAllMemos, CourseMemo.getAllMemos)
 apiRoute.register(paths.api.getAllMemosByCourseCodeAndType, CourseMemo.getAllMemosByCourseCodeAndType)
 apiRoute.register(paths.api.getCourseSemesterUsedRounds, CourseMemo.getCourseSemesterUsedRounds) // step 1: to show up which rounds already taken
 apiRoute.register(paths.api.getMemosStartingFromPrevYearSemester, CourseMemo.getMemosStartingFromPrevSemester) // step 1: to show up which rounds already taken
@@ -179,7 +179,12 @@ server.use('/', apiRoute.getRouter())
 apiRoute.register(paths.api.deleteDraftByMemoEndPoint, CourseMemo.deleteDraftByMemoEndPoint)
 
 // Get list of stored pdf files for kursinfo-web (migrated from kurs-pm-api)
+apiRoute.register(paths.api.getStoredMemoPdfList, StoredMemoPdf.fetchAllMemoFiles)
 apiRoute.register(paths.api.getStoredMemoPdfListByCourseCode, StoredMemoPdf.getStoredMemoPdfListByCourseCode)
+apiRoute.register(
+  paths.api.updateStoredPdfMemoWithApplicationCodes,
+  StoredMemoPdf.updateStoredPdfMemoWithApplicationCodes
+)
 // Get list of stored pdf files together with web-based memos all published for kurs-pm-web (migrated from kurs-pm-api)
 apiRoute.register(
   paths.api.getPdfAndWebMemosListByCourseCode,
